nowe - geometria, mst, potegowanie

--- a/TODO
+++ b/TODO
@@ -3,7 +3,6 @@ algorytmy:
         hashe,
         prefikso-sufiksy
     geometria:
-        jakies podstawy
-
+        mozna otoczke zrobic
 inne:
     mozna dorzucic jakies fajne snippety
